--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
-    </div>
+    </div> <!-- Articles -->
   </body>
 </html>
